--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,8 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# Deshabilitar la seguridad CSRF (por si acaso se hereda algo de seguridad)
+# Deshabilitar la seguridad CSRF
 spring.main.web-application-type=servlet
+
+# Perfil activo por defecto
+spring.profiles.active=default
